--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -9,7 +9,7 @@ jobs:
   build_and_publish:
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: spir-products
+      IMAGE_NAME: fit-products
     steps:
       - name: Checkout
         uses: actions/checkout@v3
