--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,8 +5,14 @@ updates:
     directory: /
     schedule:
       interval: weekly
+      day: "monday"
+      time: "06:00"
+      timezone: "Europe/Copenhagen"
 
   - package-ecosystem: npm
     directory: /
     schedule:
       interval: weekly
+      day: "monday"
+      time: "06:00"
+      timezone: "Europe/Copenhagen"
